--- a/mainapp/templates/contact.html
+++ b/mainapp/templates/contact.html
@@ -4,11 +4,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Staging Template">
-    <meta name="keywords" content="Staging, unica, creative, html">
+    <meta name="description" content="Virtualways Technologies - Leading in AI, ML, NLP and Web Development Solutions.">
+    <meta name="keywords" content="AI, Machine Learning, NLP, Computer Vision, Web Development, Software Development, Software services, Virtualways, Virtualways Technologies">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Staging | Template</title>
+    <title>Virtualways Technologies</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
@@ -108,6 +108,7 @@
                         <div class="contact__widget__item__text">
                             <h5>Phone Number</h5>
                             <span>+91 88516 36225</span>
+                            <span>+91 97179 43346</span>
                         </div>
                     </div>
                 </div>
@@ -129,19 +130,19 @@
                         </div>
                         <div class="contact__widget__item__text">
                             <h5>Office Location</h5>
-                            <span>Sector 62, Noida UP, India</span>
+                            <span>19, Institutional Area, Knowledge Park II, Greater Noida, Uttar Pradesh, India</span>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28018.565588679205!2d77.33974504318034!3d28.62014899294452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce5456ef36d9f%3A0x3b7191b1286136c8!2sSector%2062%2C%20Noida%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1722963009062!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3507.5722370188014!2d77.48787857535196!3d28.462308575758122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cc1e0fef60413%3A0x545023f9c287a3db!2s19%2C%20Institutional%20Area%2C%20Knowledge%20Park%20II%2C%20Noida%2C%20Greater%20Noida%2C%20Uttar%20Pradesh%20201306!5e0!3m2!1sen!2sin!4v1723225545565!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="row">
                 <div class="col-lg-5">
                     <div class="contact__form__text">
                         <div class="section-title">
-                            <span>Form</span>
+                            <span>Forms</span>
                             <h2>Get in touch</h2>
                         </div>
                         <p>As you might expect from a company at the forefront of artificial intelligence innovation, we maintain a rigorous focus on excellence.</p>
@@ -198,11 +199,13 @@
                         <div class="footer__logo">
                             <h5 style="color: #ffffff; font-weight: 600; font-family: 'Poppins', sans-serif; margin-bottom: 30px;">Contact</h5>
                         </div>
-                        <!-- <p>7176 Blue Spring Lane <br />Santa Monica, CA 90403</p> -->
-                        <ul>
-                            <li>support@virtualways.in</li>
-                            <li>+91 88516 36225</li>
-                        </ul>
+                        <p>Virtualways Technologies <br>
+                            19, Institutional Area, Knowledge Park II, Greater Noida, Uttar Pradesh 201306</p>
+                            <ul>
+                                <li>support@virtualways.in</li>
+                                <li>+91 88516 36225</li>
+                                <li>+91 97179 43346</li>
+                            </ul>
                         <div class="footer__social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
@@ -217,7 +220,7 @@
                         <ul>
                             <li><a href="{% url 'about' %}">About Us</a></li>
                             <li><a href="{% url 'home' %}">Services</a></li>
-                            <li><a href="{% url 'projects' %}">Our Works</a></li>
+                            <li><a href="{% url 'projects' %}">Our Work</a></li>
                             <li><a href="">Career</a></li>
                             <li><a href="">FAQs</a></li>
                         </ul>
@@ -227,10 +230,10 @@
                     <div class="footer__widget">
                         <h6>Services</h6>
                         <ul>
-                            <li><a href="">Web & Software </a></li>
+                            <li><a href="">Web & Software development</a></li>
                             <li><a href="">ML & Data Science</a></li>
                             <li><a href="">AI & Automation</a></li>
-                            <li><a href="">NLP & Computer vision </a></li>
+                            <li><a href="">NLP & Computer Vision </a></li>
                         </ul>
                     </div>
                 </div>
