--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -4,11 +4,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Staging Template">
-    <meta name="keywords" content="Staging, unica, creative, html">
+    <meta name="description" content="Virtualways Technologies - Leading in AI, ML, NLP and Web Development Solutions.">
+    <meta name="keywords" content="AI, Machine Learning, NLP, Computer Vision, Web Development, Software Development, Software services, Virtualways, Virtualways Technologies">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Staging | Template</title>
+    <title>Virtualways Technologies</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
@@ -43,13 +43,13 @@
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
         <div class="offcanvas__logo">
-            <a href="#"><img src="{% static 'img/logo.png' %}" alt=""></a>
+            <!-- <a href="#"><img src="{% static 'img/logo.png' %}" alt=""></a> -->
         </div>
         <div id="mobile-menu-wrap"></div>
-        <div class="offcanvas__widget">
+        <!-- <div class="offcanvas__widget">
             <span>Call us for any questions</span>
             <h4>+01 123 456 789</h4>
-        </div>
+        </div> -->
     </div>
     <!-- Offcanvas Menu End -->
 
@@ -99,7 +99,7 @@
             <div class="hero__items set-bg" data-setbg="{%static 'img/hero/hero-1.jpg' %}">
                 <div class="hero__text">
                     <h2>VIRTUALWAYS</h2>
-                    <a href="#" class="primary-btn">Elite AI Consulting</a>
+                    <a href="" class="primary-btn">Elite AI Consulting</a>
                     <!-- <a href="#" class="more_btn">Discover more</a> -->
                     <!-- <div class="hero__social">
                         <a href="#"><i class="fa fa-facebook"></i></a>
@@ -140,9 +140,9 @@
                                 Elite AI Consulting: Transforming Industries Globally.
                                 </div>
                         <div class="about__para__text">
-                            <p>We at VIRTUALWAYS are at the forefront of innovation in artificial intelligence, dedicated to transforming industries, businesses and enhancing human experiences through cutting-edge technologies
+                            <p>We at VIRTUALWAYS are at the forefront of innovation in artificial intelligence, dedicated to transforming industries, businesses and enhancing human experiences through cutting-edge technologies.
                             </p>
-                            <p>With a deep-rooted commitment to pushing the boundaries of what's possible in Al, we specialize in harnessing the power of machine learning, natural language processing, and computer vision along with a full suite of web and software development experience to deliver intelligent solutions to solve complex modern day problems we cater to diverse sectors worldwide, delivering tailored solutions that optimize processes, drive growth, and enhance customer experiences.</h2>
+                            <p>With a deep-rooted commitment to pushing the boundaries of what's possible in Al, we specialize in harnessing the power of machine learning, natural language processing and computer vision along with a full suite of web and software development experience to deliver intelligent solutions to solve complex modern day problems we cater to diverse sectors worldwide, delivering tailored solutions that optimize processes, drive growth and enhance customer experiences.</h2>
                             </p>
                         </div>
                         <!-- <a href="#" class="primary-btn normal-btn">Learn More</a>   -->
@@ -166,7 +166,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-title">
-                        <span>Our works</span>
+                        <span>Our work</span>
                         <h2>Latest projects</h2>
                     </div>
                 </div>
@@ -243,7 +243,7 @@
                     <div class="services__item">
                         <img src="{% static 'img/services/resized_pic2.png' %}" alt="">
                         <h4>Machine Learning & Data Science</h4>
-                        <p>Custom machine learning model development and deployment Data preprocessing, feature engineering, and predictive analytics Al-powered anomaly detection and pattern recognition.
+                        <p>Custom machine learning model development and deployment. Data preprocessing, feature engineering and predictive analytics Al-powered anomaly detection and pattern recognition.
                         </p>
                     </div>
                 </div>
@@ -260,7 +260,7 @@
                         <img src="{% static 'img/services/natural-language-processing_resized.png' %}" alt="">
                         <h4>NLP & computer vision application</h4>
                         <p>Sentiment analysis, text
-                            classification, and named entity recognition (NER) Language translation and multilingual content analysis.Object detection, image classification, and facial recognition and Video analytics for surveillance, anomaly detection, and smart cities.</p>
+                            classification and named entity recognition (NER) Language translation and multilingual content analysis. Object detection, image classification and facial recognition and Video analytics for surveillance, anomaly detection and smart cities.</p>
                     </div>
                 </div>
             </div>
@@ -573,7 +573,7 @@
                 <div class="col-lg-10 text-center">
                     <div class="callto__text">
                         <span>Why choose us?</span>
-                        <h2>Our Ability To Deliver Outstanding Results For Our Clients Starts With Our Team Of Smart.
+                        <h2>Our Ability To Deliver Outstanding Results For Our Clients Starts With Our Team Of Smart and highly motivated individuals who would stop at nothing to deliver above & beyond our clients expectations. 
                         </h2>
                         <a href="{% url 'contact' %}" class="primary-btn">Contact Us</a>
                     </div>
@@ -667,11 +667,13 @@
                         <div class="footer__logo">
                             <h5 style="color: #ffffff; font-weight: 600; font-family: 'Poppins', sans-serif; margin-bottom: 30px;">Contact</h5>
                         </div>
-                        <!-- <p>7176 Blue Spring Lane <br />Santa Monica, CA 90403</p> -->
-                        <ul>
-                            <li>support@virtualways.in</li>
-                            <li>+91 88516 36225</li>
-                        </ul>
+                        <p>Virtualways Technologies <br>
+                            19, Institutional Area, Knowledge Park II, Greater Noida, Uttar Pradesh 201306</p>
+                            <ul>
+                                <li>support@virtualways.in</li>
+                                <li>+91 88516 36225</li>
+                                <li>+91 97179 43346</li>
+                            </ul>
                         <div class="footer__social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
@@ -686,7 +688,7 @@
                         <ul>
                             <li><a href="{% url 'about' %}">About Us</a></li>
                             <li><a href="{% url 'home' %}">Services</a></li>
-                            <li><a href="{% url 'projects' %}">Our Works</a></li>
+                            <li><a href="{% url 'projects' %}">Our Work</a></li>
                             <li><a href="">Career</a></li>
                             <li><a href="">FAQs</a></li>
                         </ul>
@@ -696,10 +698,10 @@
                     <div class="footer__widget">
                         <h6>Services</h6>
                         <ul>
-                            <li><a href="">Web & Software </a></li>
+                            <li><a href="">Web & Software development</a></li>
                             <li><a href="">ML & Data Science</a></li>
                             <li><a href="">AI & Automation</a></li>
-                            <li><a href="">NLP & Computer vision </a></li>
+                            <li><a href="">NLP & Computer Vision </a></li>
                         </ul>
                     </div>
                 </div>
