--- a/mainapp/templates/projects.html
+++ b/mainapp/templates/projects.html
@@ -4,11 +4,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Staging Template">
-    <meta name="keywords" content="Staging, unica, creative, html">
+    <meta name="description" content="Virtualways Technologies - Leading in AI, ML, NLP and Web Development Solutions.">
+    <meta name="keywords" content="AI, Machine Learning, NLP, Computer Vision, Web Development, Software Development, Software services, Virtualways, Virtualways Technologies">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Staging | Template</title>
+    <title>Virtualways Technologies</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
@@ -143,7 +143,7 @@
                     </div>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <a href="#" class="primary-btn normal-btn">Load More</a>
+                    <!-- <a href="#" class="primary-btn normal-btn">Load More</a> -->
                 </div>
             </div>
         </div>
@@ -177,11 +177,13 @@
                             <div class="footer__logo">
                                 <h5 style="color: #ffffff; font-weight: 600; font-family: 'Poppins', sans-serif; margin-bottom: 30px;">Contact</h5>
                             </div>
-                            <!-- <p>7176 Blue Spring Lane <br />Santa Monica, CA 90403</p> -->
-                            <ul>
-                                <li>support@virtualways.in</li>
-                                <li>+91 88516 36225</li>
-                            </ul>
+                            <p>Virtualways Technologies <br>
+                                19, Institutional Area, Knowledge Park II, Greater Noida, Uttar Pradesh 201306</p>
+                                <ul>
+                                    <li>support@virtualways.in</li>
+                                    <li>+91 88516 36225</li>
+                                    <li>+91 97179 43346</li>
+                                </ul>
                             <div class="footer__social">
                                 <a href="#"><i class="fa fa-facebook"></i></a>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -196,7 +198,7 @@
                             <ul>
                                 <li><a href="{% url 'about' %}">About Us</a></li>
                                 <li><a href="{% url 'home' %}">Services</a></li>
-                                <li><a href="{% url 'projects' %}">Our Works</a></li>
+                                <li><a href="{% url 'projects' %}">Our Work</a></li>
                                 <li><a href="">Career</a></li>
                                 <li><a href="">FAQs</a></li>
                             </ul>
@@ -206,10 +208,10 @@
                         <div class="footer__widget">
                             <h6>Services</h6>
                             <ul>
-                                <li><a href="">Web & Software </a></li>
+                                <li><a href="">Web & Software development</a></li>
                                 <li><a href="">ML & Data Science</a></li>
                                 <li><a href="">AI & Automation</a></li>
-                                <li><a href="">NLP & Computer vision </a></li>
+                                <li><a href="">NLP & Computer Vision </a></li>
                             </ul>
                         </div>
                     </div>
