--- a/mainapp/templates/about.html
+++ b/mainapp/templates/about.html
@@ -5,11 +5,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Staging Template">
-    <meta name="keywords" content="Staging, unica, creative, html">
+    <meta name="description" content="Virtualways Technologies - Leading in AI, ML, NLP and Web Development Solutions.">
+    <meta name="keywords" content="AI, Machine Learning, NLP, Computer Vision, Web Development, Software Development, Software services, Virtualways, Virtualways Technologies">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Staging | Template</title>
+    <title>Virtualways Technologies</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
@@ -153,7 +153,7 @@
                 <div class="col-lg-10 text-center">
                     <div class="callto__text">
                         <span>Why choose us?</span>
-                        <h2>Our ability to bring outstanding results to our customers.</h2>
+                        <h2>Our ability to bring outstanding results for our customers.</h2>
                         <a href="{% url 'contact' %}" class="primary-btn">Contact Us</a>
                     </div>
                 </div>
@@ -264,10 +264,12 @@
                         <div class="footer__logo">
                             <h5 style="color: #ffffff; font-weight: 600; font-family: 'Poppins', sans-serif; margin-bottom: 30px;">Contact</h5>
                         </div>
-                        <!-- <p>7176 Blue Spring Lane <br />Santa Monica, CA 90403</p> -->
+                        <p>Virtualways Technologies <br>
+                        19, Institutional Area, Knowledge Park II, Greater Noida, Uttar Pradesh 201306</p>
                         <ul>
                             <li>support@virtualways.in</li>
                             <li>+91 88516 36225</li>
+                            <li>+91 97179 43346</li>
                         </ul>
                         <div class="footer__social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
@@ -283,7 +285,7 @@
                         <ul>
                             <li><a href="{% url 'about' %}">About Us</a></li>
                             <li><a href="{% url 'home' %}">Services</a></li>
-                            <li><a href="{% url 'projects' %}">Our Works</a></li>
+                            <li><a href="{% url 'projects' %}">Our Work</a></li>
                             <li><a href="">Career</a></li>
                             <li><a href="">FAQs</a></li>
                         </ul>
@@ -293,10 +295,10 @@
                     <div class="footer__widget">
                         <h6>Services</h6>
                         <ul>
-                            <li><a href="">Web & Software </a></li>
+                            <li><a href="">Web & Software development</a></li>
                             <li><a href="">ML & Data Science</a></li>
                             <li><a href="">AI & Automation</a></li>
-                            <li><a href="">NLP & Computer vision </a></li>
+                            <li><a href="">NLP & Computer Vision </a></li>
                         </ul>
                     </div>
                 </div>
