--- a/mainapp/templates/contact.html
+++ b/mainapp/templates/contact.html
@@ -59,7 +59,7 @@
                         <ul>
                             <li><a href="{% url 'home' %}">Home</a></li>
                             <li><a href="{% url 'projects' %}">Projects</a></li>
-                            <li><a href="{% url 'about' %}">About</a></li>
+                            <li><a href="{% url 'about' %}">About Us</a></li>
                             <!-- <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./Project-details.html">Project Details</a></li>
@@ -69,7 +69,7 @@
                                 </ul>
                             </li> -->
                             <!-- <li><a href="./blog.html">Blog</a></li> -->
-                            <li class="active"><a href="{% url 'contact' %}">Contact</a></li>
+                            <li class="active"><a href="{% url 'contact' %}">Contact Us</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -95,7 +95,7 @@
                             <span>Information</span>
                             <h2>Contact Details</h2>
                         </div>
-                        <p>As you might expect from a company at the forefront of artificial intelligence innovation, we maintain a rigorous focus on excellence.</p>
+                        <!-- <p>As you might expect from a company at the forefront of artificial intelligence innovation, we maintain a rigorous focus on excellence.</p> -->
                     </div>
                 </div>
             </div>
@@ -145,7 +145,7 @@
                             <span>Forms</span>
                             <h2>Get in touch</h2>
                         </div>
-                        <p>As you might expect from a company at the forefront of artificial intelligence innovation, we maintain a rigorous focus on excellence.</p>
+                        <p>As you might expect from a company at the forefront of artificial intelligence innovation, we maintain a rigorous focus on excellence. Kindly fill in your details, so that we can get back to you shortly.</p>
                     </div>
                 </div>
             </div>
