--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -67,7 +67,7 @@
                         <ul>
                             <li class="active"><a href="{% url 'home' %}">Home</a></li>
                             <li><a href="{% url 'projects' %}">Projects</a></li>
-                            <li><a href="{% url 'about' %}">About</a></li>
+                            <li><a href="{% url 'about' %}">About Us</a></li>
                             <!-- <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./Project-details.html">Project Details</a></li>
@@ -77,7 +77,7 @@
                                 </ul>
                             </li> -->
                             <!-- <li><a href="./blog.html">Blog</a></li> -->
-                            <li><a href="{% url 'contact' %}">Contact</a></li>
+                            <li><a href="{% url 'contact' %}">Contact Us</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -135,7 +135,7 @@
                 <div class="col-lg-6">
                     <div class="about__text">
                         <div class="section-title">
-                            <span>who are we</span>
+                            <span>who we are</span>
                             <h2>
                                 Elite AI Consulting: Transforming Industries Globally.
                                 </div>
@@ -177,7 +177,7 @@
                         <div class="project__slider__item set-bg" data-setbg="{%static 'img/project/Model.jpg' %}">
                             <div class="project__slider__item__hover">
                                 <span>Artificial Intelligence</span>
-                                <h5>Stock price prediction</h5>
+                                <h5>Stock Market prediction</h5>
                             </div>
                         </div>
                     </div>
@@ -201,7 +201,7 @@
                         <div class="project__slider__item set-bg" data-setbg="{%static 'img/project/Stockanalysis.jpg' %}">
                             <div class="project__slider__item__hover">
                                 <span>Tools</span>
-                                <h5>Inhouse Tools</h5>
+                                <h5>AI Powered Inhouse Tools</h5>
                             </div>
                         </div>
                     </div>
@@ -209,7 +209,7 @@
                         <div class="project__slider__item set-bg" data-setbg="{%static 'img/project/Searching.jpg' %}">
                             <div class="project__slider__item__hover">
                                 <span>Systems</span>
-                                <h5>Recommendation or recognition Systems</h5>
+                                <h5>Recommendation & recognition Systems</h5>
                             </div>
                         </div>
                     </div>
