--- a/mainapp/templates/projects.html
+++ b/mainapp/templates/projects.html
@@ -58,7 +58,7 @@
                         <ul>
                             <li><a href="{% url 'home' %}">Home</a></li>
                             <li class="active"><a href="{% url 'projects' %}">Projects</a></li>
-                            <li><a href="{% url 'about' %}">About</a></li>
+                            <li><a href="{% url 'about' %}">About Us</a></li>
                             <!-- <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./Project-details.html">Project Details</a></li>
@@ -68,7 +68,7 @@
                                 </ul>
                             </li> -->
                             <!-- <li><a href="./blog.html">Blog</a></li> -->
-                            <li><a href="{% url 'contact' %}">Contact</a></li>
+                            <li><a href="{% url 'contact' %}">Contact Us</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -109,9 +109,35 @@
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="project__item">
                         <img src="{%static 'img/project/details/Model2.jpg' %}" alt="">
-                        <h4><a href="#">Predictive analysis</a></h4>
+                        <h4><a href="#">Stock market prediction</a></h4>
                     </div>
                 </div>
+                <!-- hiiiiiiiiiiiiiiiiiiiiiiiii -->
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="project__item">
+                        <img src="{%static 'img/project/details/AI_project_resized.png' %}" alt="">
+                        <h4><a href="#">NSFW</a></h4>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="project__item">
+                        <img src="{%static 'img/project/details/AI_project_2.png' %}" alt="">
+                        <h4><a href="#">Toxicity & Sentiment analysis system    </a></h4>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="project__item">
+                        <img src="{%static 'img/project/details/resized_website_image2.png' %}" alt="">
+                        <h4><a href="#">Coffeetails</a></h4>
+                    </div>
+                </div>
+                <!-- <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="project__item">
+                        <img src="{%static 'img/project/details/Model2.jpg' %}" alt="">
+                        <h4><a href="#">Predictive analysis</a></h4>
+                    </div>
+                </div> -->
+                <!-- hellloooooooooooooooooooooooooooooooooooooooooooooo -->
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="project__item">
                         <img src="{%static 'img/project/details/pexels-kampus-8636589.jpg' %}" alt="">
@@ -132,14 +158,26 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="project__item">
-                        <img src="{%static 'img/project/details/Model Trainingg.jpg' %}" alt="">
-                        <h4><a href="#">natural language processing (NLP) and conversational AI.</a></h4>
+                        <img src="{%static 'img/project/details/Resized_Searching.jpg' %}" alt="">
+                        <h4><a href="#">Search Function Development</a></h4>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="project__item">
-                        <img src="{%static 'img/project/details/Searching.jpg' %}" alt="">
-                        <h4><a href="#">Search Function Development</a></h4>
+                        <img src="{%static 'img/project/details/image2_resized.png' %}" alt="">
+                        <h4><a href="#">Developer's Portfolio</a></h4>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="project__item">
+                        <img src="{%static 'img/project/details/image1_resized.png' %}" alt="">
+                        <h4><a href="#">Robnett Technologies </a></h4>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="project__item">
+                        <img src="{%static 'img/project/details/Model Trainingg.jpg' %}" alt="">
+                        <h4><a href="#">natural language processing (NLP) and conversational AI.</a></h4>
                     </div>
                 </div>
                 <div class="col-lg-12 text-center">
