--- a/mainapp/templates/about.html
+++ b/mainapp/templates/about.html
@@ -59,7 +59,7 @@
                         <ul>
                             <li><a href="{% url 'home' %}">Home</a></li>
                             <li><a href="{% url 'projects' %}">Projects</a></li>
-                            <li class="active"><a href="{% url 'about' %}">About</a></li>
+                            <li class="active"><a href="{% url 'about' %}">About Us</a></li>
                             <!-- <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./Project-details.html">Project Details</a></li>
@@ -69,7 +69,7 @@
                                 </ul>
                             </li> -->
                             <!-- <li><a href="./blog.html">Blog</a></li> -->
-                            <li><a href="{% url 'contact' %}">Contact</a></li>
+                            <li><a href="{% url 'contact' %}">Contact Us</a></li>
                         </ul>
                     </nav>
                 </div>
